Working on fixing compiler warnings